--- a/gb/13/1/16/n3777749.md
+++ b/gb/13/1/16/n3777749.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/gxnqzo350/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/gxnqzo350/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/gxnqzo350/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/gxnqzo350/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/gxnqzo350/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/gxnqzo350/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/gxnqzo350/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/gxnqzo350/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/gxnqzo350/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/gxnqzo350/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/gxnqzo350/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/gxnqzo350/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/gxnqzo350/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/gxnqzo350/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/gxnqzo350/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/gxnqzo350/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/gxnqzo350/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/gxnqzo350/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/gxnqzo350/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/gxnqzo350/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/gxnqzo350/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/gxnqzo350/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/gxnqzo350/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/gxnqzo350/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/gxnqzo350/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/gxnqzo350/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/gxnqzo350/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/gxnqzo350/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/gxnqzo350/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/gxnqzo350/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/gxnqzo350/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/gxnqzo350/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/gxnqzo350/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/gxnqzo350/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/gxnqzo350/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/gxnqzo350/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/gxnqzo350/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/gxnqzo350/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/gxnqzo350/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/gxnqzo350/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/gxnqzo350/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/gxnqzo350/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/gxnqzo350/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/gxnqzo350/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/gxnqzo350/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/gxnqzo350/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/gxnqzo350/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kobfyi3602/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>奥巴马即将正式公布枪控新计划</h2>
 
 <h6></h6>
 <hr>
-	<p>【大纪元2013年01月16日讯】（大纪元记者徐清风报导）<ahref="https://github.com/gxnqzo350/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD.md#1">美国</a>总统奥巴马将于周三公布一系列<ahref="https://github.com/gxnqzo350/djy/blob/master/gb/tag/%E6%9E%AA%E6%94%AF%E7%AE%A1%E5%88%B6.md#1">枪支管制</a>提议，包括攻击型武器禁令，购买者背景调查以及限制子弹弹药数量等。</p>
-<p>去年12月14日，<ahref="https://github.com/gxnqzo350/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD.md#1">美国</a>康州Newtown一所小学爆<ahref="https://github.com/gxnqzo350/djy/blob/master/gb/tag/%E6%9E%AA%E6%9D%80.md#1">枪杀</a>案，26人遇难，包括20名小学生。随后奥巴马命令拜登牵头组成白宫跨部门减少枪支暴力专案小组。拜登听取各方建议后本周已向奥巴马提出<ahref="https://github.com/gxnqzo350/djy/blob/master/gb/tag/%E6%9E%AA%E6%94%AF%E7%AE%A1%E5%88%B6.md#1">枪支管制</a>方案。</p>
+	<p>【大纪元2013年01月16日讯】（大纪元记者徐清风报导）<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD.md#1">美国</a>总统奥巴马将于周三公布一系列<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E6%9E%AA%E6%94%AF%E7%AE%A1%E5%88%B6.md#1">枪支管制</a>提议，包括攻击型武器禁令，购买者背景调查以及限制子弹弹药数量等。</p>
+<p>去年12月14日，<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD.md#1">美国</a>康州Newtown一所小学爆<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E6%9E%AA%E6%9D%80.md#1">枪杀</a>案，26人遇难，包括20名小学生。随后奥巴马命令拜登牵头组成白宫跨部门减少枪支暴力专案小组。拜登听取各方建议后本周已向奥巴马提出<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E6%9E%AA%E6%94%AF%E7%AE%A1%E5%88%B6.md#1">枪支管制</a>方案。</p>
 <p>白宫新闻秘书卡尼表示，奥巴马和拜登预计将于周三中午11：45举行新闻会，预计他将公布19项管制措施，和在（部分）枪支控制政策上实行总统行政命令。</p>
-<p>白宫已邀请重量级国会议员，<ahref="https://github.com/gxnqzo350/djy/blob/master/gb/tag/%E6%9E%AA%E6%8E%A7.md#1">枪控</a>倡导活动家以及上个月向奥巴马总统写信、发生枪击案的康涅狄格州Newtown小学的学生们参加周三的新闻发布会。</p>
+<p>白宫已邀请重量级国会议员，<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E6%9E%AA%E6%8E%A7.md#1">枪控</a>倡导活动家以及上个月向奥巴马总统写信、发生枪击案的康涅狄格州Newtown小学的学生们参加周三的新闻发布会。</p>
 <p>卡尼拒绝透露枪管措施的有关细节，他也表示，奥巴马可实行总统行政命令的措施有限。</p>
 <p> “我不会在总统之前透露他的提案内容。总统已经很清楚的表示，他将采取一个综合性的全面行动。”</p>
 <p>有关总统行政令，卡尼表示，“显然，在现行法律下，这个是有所限制的。国会需要在总统提出的措施上有所行动。”</p>
@@ -22,42 +22,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/gxnqzo350/djy/blob/master/gb/12/12/21/n3757964.md#1">乔州参议员提议枪支管制改革</a></li>
-<li><a href="https://github.com/gxnqzo350/djy/blob/master/gb/12/12/22/n3758758.md#1">大规模枪击案频发 美国举国反省</a></li>
-<li><a href="https://github.com/gxnqzo350/djy/blob/master/gb/12/12/22/n3758781.md#1">参议员柏克瑟提议为学校配备国民警卫队</a></li>
-<li><a href="https://github.com/gxnqzo350/djy/blob/master/gb/12/12/25/n3760704.md#1">美国两消防员在火灾现场被开枪打死</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/12/12/21/n3757964.md#1">乔州参议员提议枪支管制改革</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/12/12/22/n3758758.md#1">大规模枪击案频发 美国举国反省</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/12/12/22/n3758781.md#1">参议员柏克瑟提议为学校配备国民警卫队</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/12/12/25/n3760704.md#1">美国两消防员在火灾现场被开枪打死</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/23/n11539563.md#1" target="_blank">鸿路：最后的双十节</a></li><li><a href="https://github.com/gxnqzo350/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/17/n11390870.md#1" target="_blank">胡平：20年烈火 法轮功屹立不倒成“真金”</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/20/12/8/n12602834.md#1" target="_blank">35国逾九百政要联署 谴责中共迫害法轮功</a>  </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/4/n11088075.md#1" target="_blank">野狐一禅：刻我心碑上的右派精英</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/7/n10897982.md#1" target="_blank">《求救信》感动欧洲议会观众：会哭很多次</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/gxnqzo350/djy/blob/master/gb/21/1/13/n12684593.md#1">美国CIA解密大量UFO文件 网上可下载</a></li>
-<li><a href="https://github.com/gxnqzo350/djy/blob/master/gb/21/1/5/n12667124.md#1">大疫将行 三指中共</a></li>
-<li><a href="https://github.com/gxnqzo350/djy/blob/master/gb/20/9/29/n12439101.md#1">四岁儿子对妈妈说：我死过一次 很痛！</a></li>
-<li><a href="https://github.com/gxnqzo350/djy/blob/master/gb/20/12/30/n12653733.md#1">【命理】有无富贵命怎看 二举人求功名为何丧命？</a></li>
-<li><a href="https://github.com/gxnqzo350/djy/blob/master/gb/21/1/15/n12691126.md#1">【有冇搞错】马斯克建议人类“爱和宽容”</a></li>
-<li><a href="https://github.com/gxnqzo350/djy/blob/master/gb/21/1/16/n12691801.md#1">【思想领袖】议员米勒：1月6日国会惊魂</a></li>
-<li><a href="https://github.com/gxnqzo350/djy/blob/master/gb/21/1/17/n12693173.md#1">【唐青看时事】可防可控秘诀 砸了中美关系的锅</a></li>
-<li><a href="https://github.com/gxnqzo350/djy/blob/master/gb/21/1/15/n12691202.md#1">【时事军事】三角洲9队揭秘 剑指中俄太空武器</a></li>
-<li><a href="https://github.com/gxnqzo350/djy/blob/master/gb/21/1/16/n12692722.md#1">中国疫情严重 河北廊坊等地出现“随地倒”</a></li>
-<li><a href="https://github.com/gxnqzo350/djy/blob/master/gb/21/1/15/n12691080.md#1">刘嘉玲晒照为弟媳庆生 亿万财产或由侄子继承</a></li>
-<li><a href="https://github.com/gxnqzo350/djy/blob/master/gb/21/1/15/n12691475.md#1">蚂蚁集团成立整改组 马云被指服软认错了</a></li>
-<li><a href="https://github.com/gxnqzo350/djy/blob/master/gb/21/1/15/n12691080.md#1">刘嘉玲晒照为弟媳庆生 亿万财产或由侄子继承</a></li>
-<li><a href="https://github.com/gxnqzo350/djy/blob/master/gb/21/1/15/n12691267.md#1">余苑绮少外食戒油炸仍罹癌 营养师点出关键</a></li>
-<li><a href="https://github.com/gxnqzo350/djy/blob/master/gb/21/1/15/n12689631.md#1">【专访】王彩桦：心存善念 人生没有过不去的关卡</a></li>
-<li><a href="https://github.com/gxnqzo350/djy/blob/master/gb/21/1/15/n12691425.md#1">59岁张学友近况曝光 胡须斑白双颊凹陷</a></li>
-<li><a href="https://github.com/gxnqzo350/djy/blob/master/gb/21/1/14/n12688900.md#1">被质疑未按要求隔离 女星虞书欣陷舆论风波</a></li>
-<li><a href="https://github.com/gxnqzo350/djy/blob/master/gb/21/1/15/n12689933.md#1">好疗愈 两只法斗犬与沙发撞衫 往上一趴就隐身</a></li>
-<li><a href="https://github.com/gxnqzo350/djy/blob/master/gb/21/1/16/n12691636.md#1">【重播】洛杉矶停尸房告急 美国新变种严重吗？</a></li>
-<li><a href="https://github.com/gxnqzo350/djy/blob/master/gb/21/1/13/n12685661.md#1">缺生长激素会长皱纹、掉发 这时间睡觉分泌最多</a></li>
-<li><a href="https://github.com/gxnqzo350/djy/blob/master/gb/21/1/17/n12693215.md#1">“我不要治疗只要去台湾”马克杯网上出售</a></li>
-<li><a href="https://github.com/gxnqzo350/djy/blob/master/gb/21/1/15/n12689904.md#1">法国“已故”女子 努力证明自己还活着</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/12/n13734778.md#1">【百年真相】替毛背锅“红色特工”潘汉年惨死</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/5/n13727490.md#1">【百年真相】密谋“金融政变” 肖建华将现身？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/28/n13747559.md#1">一首名曲奏出大提琴前所未有的力量</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/29/n13748202.md#1">【未解之谜】通行灵界的科学家之二 天堂见闻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/18/n13739799.md#1">【奇梦】姻缘天定 女子依梦得夫 男子依梦得妻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752277.md#1">【马克时空】预警机、侦察机扮奇兵 助乌军精准打击俄军</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/26/n13746033.md#1">【探索时分】四大理由 中共应向俄罗斯开战？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752508.md#1">【唐瑞讲故事】睡美人</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752436.md#1">李克强十万人大会事先获得习近平默许？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752163.md#1">深圳前市长陈如桂落马 传有三大原因</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751923.md#1">港星杨英伟出售千万房产 已举家移民奥地利</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751832.md#1">评论：《壮志凌云2》证明好莱坞无需中国市场</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751310.md#1">张娜拉6月底结婚 赞新郎笑容美好且诚实善良</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/2/n13751276.md#1">好莱坞明星强尼戴普诽谤案胜诉 台主播发感言</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/26/n13746023.md#1">腰痛是肾脏在求救？肾是沉默器官 4症状要警惕</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/1/n13750249.md#1">长白发原因不一定是衰老！2种方法白发变黑发</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751690.md#1">危险长新冠4类人警惕 疫苗也挡不住？1招改善</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751309.md#1">研究发现人类肝脏永远年轻 只有不到三岁</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752195.md#1">5个早上常见的习惯 会降低睡眠品质</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/gxnqzo350/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/gxnqzo350/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/13/1/16/n3777749.htm">奥巴马即将正式公布枪控新计划</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/13/1/16/n3777749.htm">奥巴马即将正式公布枪控新计划</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/gxnqzo350/djy/blob/master/gb/13/1/16/n3777749.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/gxnqzo350/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gxnqzo350/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/gxnqzo350/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/gxnqzo350/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/gxnqzo350/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gxnqzo350/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/gxnqzo350/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gxnqzo350/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/gxnqzo350/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gxnqzo350/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/gxnqzo350/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gxnqzo350/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/gxnqzo350/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gxnqzo350/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/gxnqzo350/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gxnqzo350/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/gxnqzo350/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gxnqzo350/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/gxnqzo350/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gxnqzo350/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/gxnqzo350/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gxnqzo350/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/gxnqzo350/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gxnqzo350/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/gxnqzo350/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gxnqzo350/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/gxnqzo350/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gxnqzo350/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/gxnqzo350/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gxnqzo350/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/gxnqzo350/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gxnqzo350/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/gxnqzo350/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gxnqzo350/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/gxnqzo350/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gxnqzo350/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/gxnqzo350/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gxnqzo350/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/gxnqzo350/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gxnqzo350/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/gxnqzo350/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gxnqzo350/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/gxnqzo350/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gxnqzo350/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/gxnqzo350/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gxnqzo350/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/gxnqzo350/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gxnqzo350/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kobfyi3602/djy/blob/master/gb/13/1/16/n3777749.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
